<resources>
    <string name="app_name">SUSS</string>
    <string name="name">NAME</string>
    <string name="email">Email</string>
    <string name="phone_number">Contact</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flat_layout">Property Layout</string>
    <string name="plot_area">Plot Area in sqft</string>
    <string name="description">Description</string>
    <string name="save_and_continue">Post ad</string>
    <string name="rate">Rate</string>
    <string name="property_type">Property Type</string>
    <string name="_8942">⋮</string>
    <string name="suss_property">Suss Property</string>
    <string name="welcome">Welcome To,</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="register_with_us"> Register With Us.</string>
    <string name="no_account">No Account?</string>
    <string name="register">Register</string>
    <string name="enterName">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_onboard">Get Onboard!</string>
    <string name="home">Home</string>
    <string name="address">Address</string>
    <string name="wa_number">Whatsapp Number</string>
    <string name="sale">Sale</string>
    <string name="_500">500$</string>
    <string name="address">Address</string>
    <string name="house_type">House Type</string>
    <string name="_4bhk">4BHK |</string>
    <string name="_1200_sq_ft">1200 sq.ft</string>
    <string name="north">North</string>
    <string name="house_face">House Face</string>
    <string name="about">About</string>
    <string name="facing">Facing</string>
    <string name="plot_area_in_sqft">Plot Area in sqft</string>
    <string name="rate">Rate</string>
    <string name="select_5_pics_of_the_property">Select 5 pics of the property</string>
    <string name="attach">Attach</string>
    <string name="facing">Facing</string>
    <string name="enter_the_area_in_sqft">Enter the area in sqft</string>
    <string name="enter_the_price">Enter the price</string>
    <string name="tell_us_more_about_your_property">Tell us more about your property</string>
    <string name="address_of_the_property">Address of the property</string>
    <string name="save_details">save details</string>
    <string name="address">Address</string>
    <string name="whatsapp">Whatsapp</string>
</resources>